completed layouts for all pages

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-4"> 
-				<span id="name">Walter Garcia</span><br>
+				<span id="name"><a href="index.html">Walter Garcia</a></span><br>
 				<span id="title"> Web Designer</span>
 
 			</div>
 			<div class="col-md-8">
 				<nav>
 					<ul>
-						<li>About</li>
-						<li>Resume</li>
-						<li>Projects</li>
-						<li>Contact Me</li>
+						<a href="about.html"><li>About</li></a>
+						<a href="resume.html"><li>Resume</li></a>
+						<a href="projects.html"><li>Projects</li></a>
+						<a href="contact.html"><li>Contact Me</li></a>
 					</ul>
 				</nav>
 			</div>
@@ -31,11 +31,11 @@
 			</div>
 			<div class="col-md-7">
 				<div id="introHeader">HELLO ALL!, Welcome!</div>
-				<div id="introContent"> Thanks for checking out my online portfolio!<br> Feel free to browse My Resume or my Projects! Or just say Hello! I always love meeting people and growing my network.</div>
+				<div id="introContent"> Thanks for checking out my online portfolio!<br> Feel free to browse My Resume or my Projects! Or just say Hello! I always love meeting people and growing professional relationships.</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12" id="social">
 				<div id="socialBanner">
 				<a href="https://www.facebook.com/walter.garcia.7503" target="_blank"><img src="images/facebook.png" width="20%"></a>
 				<a href="https://twitter.com/WallE06" target="_blank"><img src="images/twitter.png" width="20%"></a>
