Final draft, ready to publish

--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
 			<div class="col-md-8">
 				<nav>
 					<ul>
-						<a href="about.html"><li>About</li></a>
+						<a href="about.html"><li style="color:orange">About</li></a>
 						<a href="resume.html"><li>Resume</li></a>
-						<a href="projects.html"><li>Projects</li></a>
+						<a href="projects.html"><li>Selected Works</li></a>
 						<a href="contact.html"><li>Contact Me</li></a>
 					</ul>
 				</nav>
@@ -36,7 +36,7 @@
 			   	          :WalterDaniel.G2@gmail.com
 				<a href="https://www.facebook.com/walter.garcia.7503" target="_blank"><img src="images/facebook.png" width="5%"></a>
 				<a href="https://twitter.com/WallE06" target="_blank"><img src="images/twitter.png" width="5%"></a>
-				<a href="https://instagram.com/walle06/" target="_blank"><img src="images/instagram.png" width="5%"></a>
+				<a href="https://www.linkedin.com/pub/walter-garcia/101/787/46b" target="_blank"><img src="images/instagram.png" width="5%"></a>
 			   </div>			 
 					</div>
 				</div>
