--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
 					<ul>
 						<a href="about.html"><li>About</li></a>
 						<a href="resume.html"><li>Resume</li></a>
-						<a href="projects.html"><li>Projects</li></a>
-						<a href="contact.html"><li>Contact Me</li></a>
+						<a href="projects.html"><li>Selected Works</li></a>
+						<a href="contact.html"><li style="color:orange">Contact Me</li></a>
 					</ul>
 				</nav>
 			</div>
@@ -32,7 +32,7 @@
 					<span id="contactInfo">
                        <a href="https://www.facebook.com/walter.garcia.7503" target="_blank"><img src="images/facebook.png" width="7%"></a>
 			           <a href="https://twitter.com/WallE06" target="_blank"><img src="images/twitter.png" width="7%"></a>
-				       <a href="https://instagram.com/walle06/" target="_blank"><img src="images/instagram.png" width="7%"></a><br>
+				       <a href="https://www.linkedin.com/pub/walter-garcia/101/787/46b" target="_blank"><img src="images/instagram.png" width="7%"></a><br>
 			           <img src="images/emaillogo.png" width="7%">
 			   	        :WalterDaniel.G2@gmail.com<br>
 			   	        Cell: (786)-512-4951.
