--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Walter Garcia Designs</title>
+	<title>Dynamic Designs by Walter!</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
-	<link rel="stylesheet" type="text/css" href="css/myCustom.css"/>	
+	<link rel="stylesheet" type="text/css" href="css/myCustom.css"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>	
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-4"> 
-				<span id="name"><a href="index.html">Walter Garcia</a></span><br>
-				<span id="title"> Web Designer</span>
+				<div id="name"><a href="index.html">Walter Garcia</a></div>
+				<div id="title"> Web Designer</div>
 
 			</div>
 			<div class="col-md-8">
@@ -19,7 +20,7 @@
 					<ul>
 						<a href="about.html"><li>About</li></a>
 						<a href="resume.html"><li>Resume</li></a>
-						<a href="projects.html"><li>Projects</li></a>
+						<a href="projects.html"><li>Selected Works</li></a>
 						<a href="contact.html"><li>Contact Me</li></a>
 					</ul>
 				</nav>
@@ -36,11 +37,13 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12" id="social">
+
 				<div id="socialBanner">
 				<a href="https://www.facebook.com/walter.garcia.7503" target="_blank"><img src="images/facebook.png" width="20%"></a>
 				<a href="https://twitter.com/WallE06" target="_blank"><img src="images/twitter.png" width="20%"></a>
-				<a href="https://instagram.com/walle06/" target="_blank"><img src="images/instagram.png" width="20%"></a>
+				<a href="https://www.linkedin.com/pub/walter-garcia/101/787/46b" target="_blank"><img src="images/instagram.png" width="20%"></a>
 			   </div>
+
 			   <div id="email">
 			   	<img src="images/emaillogo.png" width="20%">
 			   	:WalterDaniel.G2@gmail.com
