--- a/resume.html
+++ b/resume.html
@@ -18,9 +18,9 @@
 				<nav>
 					<ul>
 						<a href="about.html"><li>About</li></a>
-						<a href="resume.html"><li>Resume</li></a>
-						<a href="projects.html"><li>Projects</li></a>
-						<li>Contact Me</li>
+						<a href="resume.html"><li style="color:orange">Resume</li></a>
+						<a href="projects.html"><li>Selected Works</li></a>
+						<a href="contact.html"><li>Contact Me</li></a>
 					</ul>
 				</nav>
 			</div>
@@ -40,7 +40,7 @@
 			    </div>	
 			    <div class="row" id="resumeBody">
 			    	<div class="col-md-2">Experience:</div>
-			    	<div class="col-md-10">-Current associate at Benestream. Duties include handling multiple projects that span front office and Operations department. Designing an informational policy web page with the intent to facilitate on boarding processes </div>
+			    	<div class="col-md-10">-Current associate at Benestream. Duties include handling multiple projects that span front office and Operations department. Designing an informational policy web page with the intent to facilitate on-boarding processes </div>
 			    </div>
 			    <div class="row" id="resumeBody">
 			    	<div class="col-md-2">Objective:</div>
