--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 					<ul>
 						<a href="about.html"><li>About</li></a>
 						<a href="resume.html"><li>Resume</li></a>
-						<a href="projects.html"><li>Projects</li></a>
+						<a href="projects.html"><li style="color:orange">Selected Works</li></a>
 						<a href="contact.html"><li>Contact Me</li></a>
 					</ul>
 				</nav>
