Really final draft this time. made mouseover changes to selected works page and fixed padding on about content

--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
 			</div>
 			<div class="col-md-9">
 				<div id="introHeader">About Me:</div>
-				<div id="aboutContent">I am a New York based developer originally from Florida. A hard working individual who believes in a meticulous work ethic. No job is too big or too small, in todays market that is more and more digitally based every company deserves a clean cut web based platform. Whether its one individual or a network thats three hundred deep everyone should be able to tap into the wonderful resource of online business. And that is what I am here to provide! I bring a unique aesthetic to each project I face which is intrinsic to the core values of your company. I take the time to learn about who you are and what you do to produce the best page for your companies digital goals. browse through some of my work and feel free to comment or just say hello! I'm always up for expanding my network.
+				<div id="aboutContent">
+					<div id="aboutText">I am a New York based developer originally from Florida. A hard working individual who believes in a meticulous work ethic. No job is too big or too small, in todays market that is more and more digitally based every company deserves a clean cut web based platform. Whether its one individual or a network thats three hundred deep everyone should be able to tap into the wonderful resource of online business. And that is what I am here to provide! I bring a unique aesthetic to each project I face which is intrinsic to the core values of your company. I take the time to learn about who you are and what you do to produce the best page for your companies digital goals. browse through some of my work and feel free to comment or just say hello! I'm always up for expanding my network.</div>
 					<div id="aboutSocial">
 						<img src="images/emaillogo.png" width="5%">
 			   	          :WalterDaniel.G2@gmail.com
@@ -38,9 +39,9 @@
 				<a href="https://twitter.com/WallE06" target="_blank"><img src="images/twitter.png" width="5%"></a>
 				<a href="https://www.linkedin.com/pub/walter-garcia/101/787/46b" target="_blank"><img src="images/instagram.png" width="5%"></a>
 			   </div>			 
-					</div>
-				</div>
 			</div>
+		  </div>
+		</div>
 
 		</div>
 
