--- a/projects.html
+++ b/projects.html
@@ -29,24 +29,44 @@
 			<div class="col-md-12" id="projectBody">
 				<div class="row">
 					<div class="col-md-4" id="galleryLayout">
-						<a href="http://nycda.zone/walter252/PersonalWebsite/gallery.html" target="_blank"><img src="images/graffittilayout.png" width="100%"></a>
+						<a href="http://nycda.zone/walter252/PersonalWebsite/gallery.html" target="_blank">
+						<div id="description">This page was designed as a gallery to show the diverse landscape of NYC graffiti.</div></a>
+						<img src="images/graffittilayout.png" width="100%">
 					</div>
-					<div class="col-md-4" id="galleryLayout">
-						<a href="http://nycda.zone/walter252/grilledCheesus/entreemenu.html" target="_blank"><img src="images/menulayout.png" width="100%"></a>
+
+					<div class="col-md-4" id="galleryLayout2">
+						<a href="http://nycda.zone/walter252/grilledCheesus/entreemenu.html" target="_blank"><div id="description2">An online menu page I designed for a food truck Company.</div></a>
+						<img src="images/menulayout.png" width="100%">					
 					</div>
-					<div class="col-md-4" id="galleryLayout">
-						<a href="http://nycda.zone/walter252/CauseSite/weather.html" target="_blank"><img src="images/stormlayout.png" width="100%"></a>
+
+					<div class="col-md-4" id="galleryLayout3">
+						<a href="http://nycda.zone/walter252/CauseSite/weather.html" target="_blank">
+						<div id="description3">An informational page about Climate change I designed in a news article style layout.</div>
+						</a>
+						<img src="images/stormlayout.png" width="100%">	
 					</div>                 
                </div>
+
                <div class="row">
-					<div class="col-md-4" id="galleryLayout">
-						<a href="http://nycda.zone/walter252/grilledCheesus/" target="_blank"><img src="images/homelayout.png" width="100%"></a>
+					<div class="col-md-4" id="galleryLayout4">
+						<a href="http://nycda.zone/walter252/grilledCheesus/" target="_blank">
+							<div id="description4">This is the landing page I designed for the food truck company. A clean layout with a drop down menu. </div>
+						</a>
+						<img src="images/homelayout.png" width="100%">					
 					</div>
-					<div class="col-md-4" id="galleryLayout">
-						<a href="http://nycda.zone/walter252/CauseSite/sealevels.html" target="_blank"><img src="images/waterlevels.png" width="100%"></a>
+
+					<div class="col-md-4" id="galleryLayout5">
+						<a href="http://nycda.zone/walter252/CauseSite/sealevels.html" target="_blank"> 
+							<div id="description5">An informational page about Climate change I designed in a news article style layout.</div>
+						</a>
+						<img src="images/waterlevels.png" width="100%">
 					</div>
-					<div class="col-md-4" id="galleryLayout">
-						<a href="http://nycda.zone/walter252/CauseSite/why.html" target="_blank"><img src="images/causelayout.png" width="100%"></a>
+
+					<div class="col-md-4" id="galleryLayout6">
+						<a href="http://nycda.zone/walter252/CauseSite/why.html" target="_blank">
+							<div id="description6">An informational page about Climate change I designed in a news article style layout.</div>
+						</a>
+						<img src="images/causelayout.png" width="100%">
 					</div>                 
                </div>
 			</div>
